# ecs-240-project

./: .gitignore  CMakeLists.txt  README.md
basiKexamples/input/shouldPass/: basiK1.txt  basiK2.txt  basiK3.txt
basiKexamples/output/: basiK1.txt  basiK2.txt
include/: assignment.hpp  astNode.hpp  command _with_scope.hpp  command.hpp  command_with_scope.hpp  complexCommand.hpp  expression.hpp  line.hpp  parser.hpp  program.hpp  scanner.hpp  token.hpp  tokenizer.hpp
jupyter/: CMakeLists.txt  environment-dev.yml  postBuild
jupyter/include/xeus-basik/: xeus_basik_config.hpp  xeus_basik_interpreter.hpp
jupyter/include/xeus-calc/: xeus_calc_config.hpp
jupyter/share/jupyter/kernels/basik/: kernel.json  kernel.json.in
jupyter/src/: main.cpp  xeus_basik_interpreter.cpp
parser/: astNode.cpp  main.cpp  parser.cpp  parser.hpp
src/: assignment.cpp  command.cpp  complexCommand.cpp  expression.cpp  main.cpp  parser.cpp  program.cpp  scanner.cpp  tokenizer.cpp
tokenizer/: a.out  main.cpp  tokenizer  tokenizer.cpp  tokenizer.hpp
tokenizer/basiKexamples/input/: basiK2.txt
tokenizer/basiKexamples/input/shouldPass/: basiK1.txt  basiK2.txt  basiK3.txt
